--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 .container {
     width: 100%;
     height: 100vh;
-    background: #e3f9ff;
+    background: #b1d2ff;
     display: flex;
     align-items: center;
     justify-content: center;
